tests/suite/snapshots/suite__check__tests__check__bad_override_2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_override_2.xi:2:5]
   │
 2 │     foo(a: bool) {}
   ·     ───────┬───────  
   ·            ╰───────── Implementation does not match signature
───╯

